--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
 					</div>
 				</div>
     
+    <script>
+      if (window.innerWidth <= 768) {
+        window.location.href = "mobile.html";
+      }
+    </script>
     <script src="/js/marquee.js"></script>
+    
 </body>
 </html>
