--- a/info.html
+++ b/info.html
@@ -180,8 +180,8 @@
         <div class="info-entry" id="info-5">
           Contact<br /><a href="mailto:chaeyunahn@gmail.com"
             >chaeyunahn@gmail.com</a
-          ><br /><a href="are.na/chae-ahn/" target="_blank">Arena</a><br /><a
-            href="instagram.com/chaeyunahn/"
+          ><br /><a href="https://www.are.na/chae-ahn/" target="_blank">Arena</a><br /><a
+            href="https://www.instagram.com/chaeyunahn/"
             target="_blank"
             >Instagram</a
           >
