--- a/info.html
+++ b/info.html
@@ -178,11 +178,10 @@
           Jakarta, ID
         </div>
         <div class="info-entry" id="info-5">
-          Contact<br /><a href="mailto:chaeyunahn@gmail.com"
-            >chaeyunahn@gmail.com</a
-          ><br /><a href="https://www.are.na/chae-ahn/" target="_blank">Arena</a><br /><a
-            href="https://www.instagram.com/chaeyunahn/"
-            target="_blank"
+          Contact<br />
+          <a href="mailto:chaeyunahn@gmail.com">chaeyunahn@gmail.com</a><br />
+          <a href="https://www.are.na/chae-ahn/" target="_blank">Arena</a><br />
+          <a href="https://www.instagram.com/chaeyunahn/" target="_blank"
             >Instagram</a
           >
         </div>
