Update blog, styles, and fonts

--- a/project-cinema.html
+++ b/project-cinema.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chae Ahn</title>
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/marquee.css" />
+    <link rel="stylesheet" href="/css/menu.css" />
     <link rel="stylesheet" href="project.css" />
   </head>
   <body>
@@ -24,7 +27,7 @@
               >@Seoul, South Korea</a
             >
           </div>
-          <div class="date-stamp">-- 06.12.2024</div>
+          <div class="date-stamp">— 06.12.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -32,7 +35,7 @@
               >@Singapore</a
             >
           </div>
-          <div class="date-stamp">-- 15.11.2024</div>
+          <div class="date-stamp">— 15.11.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -40,7 +43,7 @@
               >@Jakarta, Indonesia</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -48,7 +51,7 @@
               >@Bangkok, Thailand</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
 
         <!-- 복사본 -->
@@ -58,7 +61,7 @@
               >@Lausanne, Switzerland</a
             >
           </div>
-          <div class="date-stamp">-- 31.07.2025</div>
+          <div class="date-stamp">— 31.07.2025</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -66,7 +69,7 @@
               >@Seoul, South Korea</a
             >
           </div>
-          <div class="date-stamp">-- 06.12.2024</div>
+          <div class="date-stamp">— 06.12.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -74,7 +77,7 @@
               >@Singapore</a
             >
           </div>
-          <div class="date-stamp">-- 15.11.2024</div>
+          <div class="date-stamp">— 15.11.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -82,7 +85,7 @@
               >@Jakarta, Indonesia</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -90,7 +93,7 @@
               >@Bangkok, Thailand</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
       </div>
     </div>
@@ -110,14 +113,14 @@
         Korean Film Archive, no ISBN
       </div>
       <div class="slider">
-        <img src="img/cinema/cinema-1.png" class="active" />
-        <img src="img/cinema/cinema-2.png" />
+        <img src="img/cinema/cinema-2.png" class="active" />
         <img src="img/cinema/cinema-3.png" />
         <img src="img/cinema/cinema-4.png" />
         <img src="img/cinema/cinema-5.png" />
         <img src="img/cinema/cinema-6.png" />
         <img src="img/cinema/cinema-7.png" />
         <img src="img/cinema/cinema-8.png" />
+        <img src="img/cinema/cinema-9.png" />
 
         <div class="nav-zone nav-left" onclick="prevSlide()"></div>
         <div class="nav-zone nav-right" onclick="nextSlide()"></div>
