--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chae Ahn</title>
+    <link rel="stylesheet" href="/css/reset.css">
+    <link rel="stylesheet" href="/css/marquee.css">
+    <link rel="stylesheet" href="/css/menu.css">
 		<link rel="stylesheet" href="work.css">
 </head>
 <body>
