--- a/info.html
+++ b/info.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chae Ahn</title>
+    <link rel="stylesheet" href="/css/reset.css" />
+    <link rel="stylesheet" href="/css/marquee.css" />
+    <link rel="stylesheet" href="/css/menu.css" />
     <link rel="stylesheet" href="info.css" />
   </head>
   <body>
@@ -15,7 +18,7 @@
               >@Lausanne, Switzerland</a
             >
           </div>
-          <div class="date-stamp">-- 31.07.2025</div>
+          <div class="date-stamp">— 31.07.2025</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -23,7 +26,7 @@
               >@Seoul, South Korea</a
             >
           </div>
-          <div class="date-stamp">-- 06.12.2024</div>
+          <div class="date-stamp">— 06.12.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -31,7 +34,7 @@
               >@Singapore</a
             >
           </div>
-          <div class="date-stamp">-- 15.11.2024</div>
+          <div class="date-stamp">— 15.11.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -39,7 +42,7 @@
               >@Jakarta, Indonesia</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -47,7 +50,7 @@
               >@Bangkok, Thailand</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <!-- 복사본 -->
         <div class="stamp">
@@ -56,7 +59,7 @@
               >@Lausanne, Switzerland</a
             >
           </div>
-          <div class="date-stamp">-- 31.07.2025</div>
+          <div class="date-stamp">— 31.07.2025</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -64,7 +67,7 @@
               >@Seoul, South Korea</a
             >
           </div>
-          <div class="date-stamp">-- 06.12.2024</div>
+          <div class="date-stamp">— 06.12.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -72,7 +75,7 @@
               >@Singapore</a
             >
           </div>
-          <div class="date-stamp">-- 15.11.2024</div>
+          <div class="date-stamp">— 15.11.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -80,7 +83,7 @@
               >@Jakarta, Indonesia</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -88,7 +91,7 @@
               >@Bangkok, Thailand</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
       </div>
     </div>
