Update layout and media queries, remove mobile files

--- a/project-shaping-type.html
+++ b/project-shaping-type.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="project.css" />
   </head>
   <body>
-    <!-- ✅ Marquee section -->
+    <!— ✅ Marquee section —>
     <div class="marquee-wrapper">
       <div id="marquee">
         <div class="stamp">
@@ -19,7 +19,7 @@
               >@Lausanne, Switzerland</a
             >
           </div>
-          <div class="date-stamp">-- 31.07.2025</div>
+          <div class="date-stamp">— 31.07.2025</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -27,7 +27,7 @@
               >@Seoul, South Korea</a
             >
           </div>
-          <div class="date-stamp">-- 06.12.2024</div>
+          <div class="date-stamp">— 06.12.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -35,7 +35,7 @@
               >@Singapore</a
             >
           </div>
-          <div class="date-stamp">-- 15.11.2024</div>
+          <div class="date-stamp">— 15.11.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -43,7 +43,7 @@
               >@Jakarta, Indonesia</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -51,17 +51,17 @@
               >@Bangkok, Thailand</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
 
-        <!-- 복사본 -->
+        <!— 복사본 —>
         <div class="stamp">
           <div class="location-stamp">
             <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
               >@Lausanne, Switzerland</a
             >
           </div>
-          <div class="date-stamp">-- 31.07.2025</div>
+          <div class="date-stamp">— 31.07.2025</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -69,7 +69,7 @@
               >@Seoul, South Korea</a
             >
           </div>
-          <div class="date-stamp">-- 06.12.2024</div>
+          <div class="date-stamp">— 06.12.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -77,7 +77,7 @@
               >@Singapore</a
             >
           </div>
-          <div class="date-stamp">-- 15.11.2024</div>
+          <div class="date-stamp">— 15.11.2024</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -85,7 +85,7 @@
               >@Jakarta, Indonesia</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
         <div class="stamp">
           <div class="location-stamp">
@@ -93,19 +93,19 @@
               >@Bangkok, Thailand</a
             >
           </div>
-          <div class="date-stamp">-- 04.20.2014</div>
+          <div class="date-stamp">— 04.20.2014</div>
         </div>
       </div>
     </div>
 
-    <!-- ✅ Header menu -->
+    <!— ✅ Header menu —>
     <div class="header-menu">
       <div class="menu"><a href="info.html">Chae Ahn</a></div>
       <div class="menu"><a href="blog.html">Blog</a></div>
       <div class="menu"><a href="index.html">Selected Works</a></div>
     </div>
 
-    <!-- ✅ Project layout: left info, right slider -->
+    <!— ✅ Project layout: left info, right slider —>
     <div class="project-container">
       <div class="info">
         <i>Shaping Type</i>, Book, 2025<br /><br />
@@ -136,7 +136,7 @@
       </div>
     </div>
 
-    <!-- ✅ JS -->
+    <!— ✅ JS —>
     <script src="/js/project-img-slider.js"></script>
     <script src="/js/marquee.js"></script>
   </body>
