--- a/blog.html
+++ b/blog.html
@@ -106,28 +106,60 @@
     <div class="content-wrapper">
       <!-- Date List -->
       <div class="date-list" id="date-list-en" lang="en">
-        <a class="date" data-target="entry8-en">12 June 2025, Seoul</a>
-        <a class="date" data-target="entry7-en">05 March 2025, Seoul</a>
-        <a class="date" data-target="entry6-en">21 November 2023, Seoul</a>
-        <a class="date" data-target="entry5-en">19 June 2023, Seoul</a>
-        <a class="date" data-target="entry4-en">31 March 2022, Seoul</a>
-        <a class="date" data-target="entry3-en">13 January 2023, Seoul</a>
-        <a class="date" data-target="entry2-en">9 November 2022, Yangpyeong</a>
-        <a class="date" data-target="entry1-en">22 October 2022, Seoul</a>
+        <a class="date" data-target="entry8-en" href="#top"
+          >12 June 2025, Seoul</a
+        >
+        <a class="date" data-target="entry7-en" href="#top"
+          >05 March 2025, Seoul</a
+        >
+        <a class="date" data-target="entry6-en" href="#top"
+          >21 November 2023, Seoul</a
+        >
+        <a class="date" data-target="entry5-en" href="#top"
+          >19 June 2023, Seoul</a
+        >
+        <a class="date" data-target="entry4-en" href="#top"
+          >31 March 2022, Seoul</a
+        >
+        <a class="date" data-target="entry3-en" href="#top"
+          >13 January 2023, Seoul</a
+        >
+        <a class="date" data-target="entry2-en" href="#top"
+          >9 November 2022, Yangpyeong</a
+        >
+        <a class="date" data-target="entry1-en" href="#top"
+          >22 October 2022, Seoul</a
+        >
       </div>
       <div class="date-list" id="date-list-ko" lang="ko" style="display: none">
-        <a class="date" data-target="entry8-ko">2025년 6월 12일 , 서울</a>
-        <a class="date" data-target="entry7-ko">2025년 3월 5일 , 서울</a>
-        <a class="date" data-target="entry6-ko">2023년 11월 21일 , 서울</a>
-        <a class="date" data-target="entry5-ko">2023년 6월 19일 , 서울</a>
-        <a class="date" data-target="entry4-ko">2023년 3월 31일 , 서울</a>
-        <a class="date" data-target="entry3-ko">2023년 1월 13일 , 서울</a>
-        <a class="date" data-target="entry2-ko">2022년 11월 9일 , 양평</a>
-        <a class="date" data-target="entry1-ko">2022년 10월 22일 , 서울</a>
+        <a class="date" data-target="entry8-ko" href="#top"
+          >2025년 6월 12일 , 서울</a
+        >
+        <a class="date" data-target="entry7-ko" href="#top"
+          >2025년 3월 5일 , 서울</a
+        >
+        <a class="date" data-target="entry6-ko" href="#top"
+          >2023년 11월 21일 , 서울</a
+        >
+        <a class="date" data-target="entry5-ko" href="#top"
+          >2023년 6월 19일 , 서울</a
+        >
+        <a class="date" data-target="entry4-ko" href="#top"
+          >2023년 3월 31일 , 서울</a
+        >
+        <a class="date" data-target="entry3-ko" href="#top"
+          >2023년 1월 13일 , 서울</a
+        >
+        <a class="date" data-target="entry2-ko" href="#top"
+          >2022년 11월 9일 , 양평</a
+        >
+        <a class="date" data-target="entry1-ko" href="#top"
+          >2022년 10월 22일 , 서울</a
+        >
       </div>
 
       <!-- Blog Content -->
-      <div class="blog-content">
+      <div class="blog-content" id="top">
         <div class="blog-entry active" id="entry8-en" lang="en">
           Summer in Seoul is thick and heavy. But luckily, by the time I leave,
           I’ll be heading somewhere cooler. I’ve started getting ready for
@@ -853,17 +885,17 @@
           다이어그램을 보자마자 이번 전시의 의도를 직관적으로 이해할 수 있었다.
           전시에 참여한 20명의 작가가 각자에게 주어진 시공간 안에서 지금 이 순간
           가장 소중한 것을 시각화한다는 구조와 잘 맞아떨어졌다. 이 다이어그램을
-          보고 곧바로 ‘타입으로 구현해야겠다’는 생각이 들었다. 시각 언어의 키
+          보고 곧바로 타입으로 구현해야겠다는 생각이 들었다. 시각 언어의 키
           비주얼로 사용하기에 적절하다고 판단했다. 선의 굵기 차이, 점선 처리,
           대시의 간격 같은 요소들은 모두 조절 가능한 세팅 값으로 생각하며 작업을
-          진행했다. 일러스트레이터에서 Stroke, Dash, Offset 값을 하나하나 손으로
+          진행했다. 일러스트레이터에서 Stroke, dash, offset 값을 하나하나 손으로
           조정하고 출력하는 방식이었다. 작업 과정 전체가 컴퓨터적이고 기계적인
           질서 안에서 이루어졌기 때문에, 어쩌면 지금까지 만든 작업 중 가장
-          ‘인공스러운’ 결과물일지도 모르겠다.<br /><br />SM: 이번 전시의
-          분위기나 느낀 점은 어땠나?<br />CA: 18명의 작가와 함께한 전시였고, 한
-          건물 안에서도 층마다 완전히 다른 공간에 들어온 듯한 경험을 할 수
-          있어서 재밌었다. 특히 기억에 남는 순간이 있다. 어떤 관람객이 전시를
-          보고 감동을 받았다고 이야기했다. 각 작업마다 작가의 개성이 뚜렷하고
+          인공스러운 결과물일지도 모르겠다.<br /><br />SM: 이번 전시의 분위기나
+          느낀 점은 어땠나?<br />CA: 18명의 작가와 함께한 전시였고, 한 건물
+          안에서도 층마다 완전히 다른 공간에 들어온 듯한 경험을 할 수 있어서
+          재밌었다. 특히 기억에 남는 순간이 있다. 어떤 관람객이 전시를 보고
+          감동을 받았다고 이야기했다. 각 작업마다 작가의 개성이 뚜렷하고
           진취적인 시도들이 돋보였으며, 그 안에서 삶에 대한 용기와 자극을
           받았다고 말했다. 그 이야기를 듣고 이번 전시를 하길 잘했다는 생각이
           들었다.<br /><br />SM: ‘인공적인’이라는 단어가 부정적으로 들릴 수도
