Update layout and color

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/menu.css" />
     <link rel="stylesheet" href="/blog.css" />
   </head>
-  <body>
+  <body id="top">
     <div class="marquee-wrapper">
       <div id="marquee">
         <div class="stamp">
@@ -159,7 +159,7 @@
       </div>
 
       <!-- Blog Content -->
-      <div class="blog-content" id="top">
+      <div class="blog-content">
         <div class="blog-entry active" id="entry8-en" lang="en">
           Summer in Seoul is thick and heavy. But luckily, by the time I leave,
           I’ll be heading somewhere cooler. I’ve started getting ready for
