--- a/info.html
+++ b/info.html
@@ -115,16 +115,16 @@
 
       <div class="info-content">
         <div class="info-entry" id="info-1">
-          Introduction<br />Chae Ahn (b. 1996) is a graphic designer and type
-          design student from Seoul, South Korea, currently based in Lausanne.
-          Her work explores the relationship between letterforms, identity, and
-          storytelling through editorial design, visual identity systems, and
-          experimental type. She has collaborated with artists, institutions,
-          and publishing collectives such as Ningen Paper Press — with whom she
-          has organized talk sessions, led workshops, and participated in book
-          fairs. In 2025, she began her MA in Type Design at ECAL to develop
-          multilingual, research-driven typefaces — from book typography to
-          motion and web environments.
+          Introduction<br />Chae Ahn (b. 1996) is a graphic and type designer
+          from Seoul, South Korea, currently living and studying in Lausanne.
+          Her work interweaves and threads strands of text, a typographic
+          practice through which language, identity, and a writing tool become
+          entangled. She has collaborated with artists, researchers, and
+          publishing collectives including Ningen Paper Press, organizing public
+          talks, facilitating critical workshops, and publishing zines rooted in
+          archival research. Since 2025, she has been pursuing an MA in Type
+          Design at ECAL, where she develops multilingual typefaces grounded in
+          cultural context and experimental approaches.
         </div>
         <div class="info-entry" id="info-2">
           Work Experience<br /><a
