--- a/info.html
+++ b/info.html
@@ -117,14 +117,14 @@
         <div class="info-entry" id="info-1">
           Introduction<br />Chae Ahn (b. 1996) is a graphic and type designer
           from Seoul, South Korea, currently living and studying in Lausanne.
-          Her work interweaves and threads strands of text, a typographic
-          practice through which language, identity, and a writing tool become
-          entangled. She has collaborated with artists, researchers, and
-          publishing collectives including Ningen Paper Press, organizing public
-          talks, facilitating critical workshops, and publishing zines rooted in
-          archival research. Since 2025, she has been pursuing an MA in Type
-          Design at ECAL, where she develops multilingual typefaces grounded in
-          cultural context and experimental approaches.
+          She treats typography as a tool, a method of writing through which
+          language and identity become intricately entangled.She has
+          collaborated with artists, researchers, and publishing collectives
+          including Ningen Paper Press, organizing public talks, facilitating
+          critical workshops, and publishing zines rooted in archival research.
+          Since 2025, she has been pursuing an MA in Type Design at ECAL, where
+          she develops multilingual typefaces grounded in cultural context and
+          experimental approaches.
         </div>
         <div class="info-entry" id="info-2">
           Work Experience<br /><a
