Few update: Hyphen

--- a/index.html
+++ b/index.html
@@ -10,21 +10,91 @@
 		<link rel="stylesheet" href="work.css">
 </head>
 <body>
-      <div class="marquee-wrapper">
-        <div id="marquee">
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank">@Lausanne, Switzerland</a></div><div class="date-stamp">-- 31.07.2025</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank">@Seoul, South Korea</a></div><div class="date-stamp">-- 06.12.2024</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a></div><div class="date-stamp">-- 15.11.2024</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank">@Jakarta, Indonesia</a></div><div class="date-stamp">-- 04.20.2014</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank">@Bangkok, Thailand</a></div><div class="date-stamp">-- 04.20.2014</div></div>
-          <!-- 복사본 -->
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank">@Lausanne, Switzerland</a></div><div class="date-stamp">-- 31.07.2025</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank">@Seoul, South Korea</a></div><div class="date-stamp">-- 06.12.2024</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a></div><div class="date-stamp">-- 15.11.2024</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank">@Jakarta, Indonesia</a></div><div class="date-stamp">-- 04.20.2014</div></div>
-          <div class="stamp"><div class="location-stamp"><a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank">@Bangkok, Thailand</a></div><div class="date-stamp">-- 04.20.2014</div></div>
+  <div class="marquee-wrapper">
+    <div id="marquee">
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
+            >@Lausanne, Switzerland</a
+          >
         </div>
+        <div class="date-stamp">— 31.07.2025</div>
       </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
+            >@Seoul, South Korea</a
+          >
+        </div>
+        <div class="date-stamp">— 06.12.2024</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank"
+            >@Singapore</a
+          >
+        </div>
+        <div class="date-stamp">— 15.11.2024</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
+            >@Jakarta, Indonesia</a
+          >
+        </div>
+        <div class="date-stamp">— 04.20.2014</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
+            >@Bangkok, Thailand</a
+          >
+        </div>
+        <div class="date-stamp">— 04.20.2014</div>
+      </div>
+      <!-- 복사본 -->
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
+            >@Lausanne, Switzerland</a
+          >
+        </div>
+        <div class="date-stamp">— 31.07.2025</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
+            >@Seoul, South Korea</a
+          >
+        </div>
+        <div class="date-stamp">— 06.12.2024</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank"
+            >@Singapore</a
+          >
+        </div>
+        <div class="date-stamp">— 15.11.2024</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
+            >@Jakarta, Indonesia</a
+          >
+        </div>
+        <div class="date-stamp">— 04.20.2014</div>
+      </div>
+      <div class="stamp">
+        <div class="location-stamp">
+          <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
+            >@Bangkok, Thailand</a
+          >
+        </div>
+        <div class="date-stamp">— 04.20.2014</div>
+      </div>
+    </div>
+  </div>
     
 			<div class="header-menu">
 				<div class="menu"><a href="info.html">Chae Ahn</a></div>
