--- a/info.html
+++ b/info.html
@@ -30,9 +30,7 @@
         </div>
         <div class="stamp">
           <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank"
-              >@Singapore</a
-            >
+            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a>
           </div>
           <div class="date-stamp">— 15.11.2024</div>
         </div>
@@ -71,9 +69,7 @@
         </div>
         <div class="stamp">
           <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank"
-              >@Singapore</a
-            >
+            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a>
           </div>
           <div class="date-stamp">— 15.11.2024</div>
         </div>
@@ -115,81 +111,62 @@
 
       <div class="info-content">
         <div class="info-entry" id="info-1">
-          Introduction<br />Chae Ahn (b. 1996) is a graphic and type designer
-          from Seoul, South Korea, currently living and studying in Lausanne.
-          She treats typography as a tool, a method of writing through which
-          language and identity become intricately entangled.She has
-          collaborated with artists, researchers, and publishing collectives
-          including Ningen Paper Press, organizing public talks, facilitating
-          critical workshops, and publishing zines rooted in archival research.
-          Since 2025, she has been pursuing an MA in Type Design at ECAL, where
-          she develops multilingual typefaces grounded in cultural context and
+          Introduction<br />Chae Ahn (b. 1996) is a graphic and type designer from Seoul, South
+          Korea, currently living and studying in Lausanne. She treats typography as a tool, a
+          method of writing through which language and identity become intricately entangled. She
+          has collaborated with artists, researchers, and publishing collectives including Ningen
+          Paper Press, organizing public talks, facilitating critical workshops, and publishing
+          zines rooted in archival research. Since 2025, she has been pursuing an MA in Type Design
+          at ECAL, where she develops multilingual typefaces grounded in cultural context and
           experimental approaches.
         </div>
         <div class="info-entry" id="info-2">
-          Work Experience<br /><a
-            href="https://ningenpaperpress.com/"
-            target="_blank"
+          Work Experience<br /><a href="https://ningenpaperpress.com/" target="_blank"
             >Ningen Paper Press</a
           >
           (2022 — )<br />—
-          <a
-            href="https://www.instagram.com/p/DKy_u32J3aJ/?hl=en&img_index=1"
-            target="_blank"
+          <a href="https://www.instagram.com/p/DKy_u32J3aJ/?hl=en&img_index=1" target="_blank"
             >Emahoy Tsegué-Maryam Guèbrou Talk Session</a
           >
-          with Mississipi Records and Thomas Feng, Amenohi Coffee Shop and
-          Cemetery Park, Seoul, KR, 2025<br />—
-          <a
-            href="https://www.koreafilm.or.kr/museum/educations/EI_00386"
-            target="_blank"
+          with Mississipi Records and Thomas Feng, Amenohi Coffee Shop and Cemetery Park, Seoul, KR,
+          2025<br />—
+          <a href="https://www.koreafilm.or.kr/museum/educations/EI_00386" target="_blank"
             >Making a Zine with a Film Archive</a
           >, Korean Film Archive, Seoul, KR, 2025<br />—
-          <a href="https://www.instagram.com/deskbookfair/" target="_blank"
-            >Desk Book Fair</a
-          >, Birdcall, Seoul, KR, 12.2024<br />—
-          <a href="https://gsbf.kr/about/">Gunsan Book Fair</a>, Gunsan
-          Citizens' Cultural Center, Gunsan, KR, 2024<br />—
-          <a href="https://visla.kr/article/event/253167/" target="_blank"
-            >Visla Book Swap</a
-          >, QUEST, Seoul, KR, 2024
+          <a href="https://www.instagram.com/deskbookfair/" target="_blank">Desk Book Fair</a>,
+          Birdcall, Seoul, KR, 12.2024<br />— <a href="https://gsbf.kr/about/">Gunsan Book Fair</a>,
+          Gunsan Citizens' Cultural Center, Gunsan, KR, 2024<br />—
+          <a href="https://visla.kr/article/event/253167/" target="_blank">Visla Book Swap</a>,
+          QUEST, Seoul, KR, 2024
         </div>
         <div class="info-entry" id="info-3">
-          Collaborators and Clients<br />(in alphabetical order)Amenohi Coffee
-          Shop, Annpaak Space,
-          <a href="https://birdcall-kiosk.online/" target="_blank">Birdcall</a>,
-          Chung-Ang University, Froggy Office, Gunsan Citizen Cultural Center,
-          Heejo Kim, Hongik University, Jo WonYong, K.Decadance, Kang Ryu,
-          Korean Federation of Film Archives, Light Gallery, M Theater,
-          <a href="https://www.mississippirecords.net/" target="_blank"
-            >Mississipi Records</a
-          >, <a href="https://www.mipark.info/" target="_blank">Mi Pak</a>,
-          Mudaeruk, Podosi Coffee Shop, Project Tür, Quest, Seoul Foundation for
-          Arts and Culture, Seoul Museum of Art, Solmon Kim, Space Pado, Story
-          Kaan, Sundan-Sail, The Zoom Art Center,
-          <a href="https://www.thomasfengmusic.com/" target="_blank"
-            >Thomas Feng</a
-          >, Via Coffee Shop,
-          <a href="https://visla.kr/" target="_blank">Visla Magazine</a>,
-          whatreallymatters, Yeonhui Art Center
+          Collaborators and Clients<br />(in alphabetical order)Amenohi Coffee Shop, Annpaak Space,
+          <a href="https://birdcall-kiosk.online/" target="_blank">Birdcall</a>, Chung-Ang
+          University, Froggy Office, Gunsan Citizen Cultural Center, Heejo Kim, Hongik University,
+          Jo WonYong, K.Decadance, Kang Ryu, Korean Federation of Film Archives, Light Gallery, M
+          Theater,
+          <a href="https://www.mississippirecords.net/" target="_blank">Mississipi Records</a>,
+          <a href="https://www.mipark.info/" target="_blank">Mi Pak</a>, Mudaeruk, Podosi Coffee
+          Shop, Project Tür, Quest, Seoul Foundation for Arts and Culture, Seoul Museum of Art,
+          Solmon Kim, Space Pado, Story Kaan, Sundan-Sail, The Zoom Art Center,
+          <a href="https://www.thomasfengmusic.com/" target="_blank">Thomas Feng</a>, Via Coffee
+          Shop, <a href="https://visla.kr/" target="_blank">Visla Magazine</a>, whatreallymatters,
+          Yeonhui Art Center
         </div>
 
         <div class="info-entry" id="info-4">
-          Education<br />— (starting 2025) MA in Type Design, ÉCAL University of
-          Art and Design Lausanne, CH<br />— BA in Product Design, Hongik
-          University, Seoul, KR<br />— HS Diploma, Jakarta International School,
-          Jakarta, ID
+          Education<br />— (starting 2025) MA in Type Design, ÉCAL University of Art and Design
+          Lausanne, CH<br />— BA in Product Design, Hongik University, Seoul, KR<br />— HS Diploma,
+          Jakarta International School, Jakarta, ID
         </div>
         <div class="info-entry" id="info-5">
           Contact<br />
           <a href="mailto:chaeyunahn@gmail.com">chaeyunahn@gmail.com</a><br />
           <a href="https://www.are.na/chae-ahn/" target="_blank">Arena</a><br />
-          <a href="https://www.instagram.com/chaeyunahn/" target="_blank"
-            >Instagram</a
-          >
+          <a href="https://www.instagram.com/chaeyunahn/" target="_blank">Instagram</a>
         </div>
         <div class="info-entry" id="info-6">
-          About This Site<br />— Web design and development: Chae Ahn
+          About This Site<br />Web design and development: Chae Ahn
         </div>
       </div>
     </div>
