--- a/project-cinema.html
+++ b/project-cinema.html
@@ -12,88 +12,88 @@
   <body>
     <!-- ✅ Marquee section -->
     <div class="marquee-wrapper">
-      <div id="marquee">
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
-              >@Lausanne, Switzerland</a
-            >
+      <div class="marquee">
+        <div class="marquee-content">
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
+                >@Lausanne, Switzerland</a
+              >
+            </div>
+            <div class="date-stamp">— 31.07.2025</div>
           </div>
-          <div class="date-stamp">-- 31.07.2025</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
-              >@Seoul, South Korea</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
+                >@Seoul, South Korea</a
+              >
+            </div>
+            <div class="date-stamp">— 06.12.2024</div>
           </div>
-          <div class="date-stamp">— 06.12.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank"
-              >@Singapore</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a>
+            </div>
+            <div class="date-stamp">— 15.11.2024</div>
           </div>
-          <div class="date-stamp">— 15.11.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
-              >@Jakarta, Indonesia</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
+                >@Jakarta, Indonesia</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
           </div>
-          <div class="date-stamp">— 04.20.2014</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
-              >@Bangkok, Thailand</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
+                >@Bangkok, Thailand</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
           </div>
-          <div class="date-stamp">— 04.20.2014</div>
         </div>
 
-        <!-- 복사본 -->
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
-              >@Lausanne, Switzerland</a
-            >
+        <div class="marquee-content" aria-hidden="true">
+          <!-- 복사본 (같은 내용) -->
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
+                >@Lausanne, Switzerland</a
+              >
+            </div>
+            <div class="date-stamp">— 31.07.2025</div>
           </div>
-          <div class="date-stamp">— 31.07.2025</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
-              >@Seoul, South Korea</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
+                >@Seoul, South Korea</a
+              >
+            </div>
+            <div class="date-stamp">— 06.12.2024</div>
           </div>
-          <div class="date-stamp">— 06.12.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank"
-              >@Singapore</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a>
+            </div>
+            <div class="date-stamp">— 15.11.2024</div>
           </div>
-          <div class="date-stamp">— 15.11.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
-              >@Jakarta, Indonesia</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
+                >@Jakarta, Indonesia</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
           </div>
-          <div class="date-stamp">— 04.20.2014</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
-              >@Bangkok, Thailand</a
-            >
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
+                >@Bangkok, Thailand</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
           </div>
-          <div class="date-stamp">— 04.20.2014</div>
         </div>
       </div>
     </div>
@@ -109,8 +109,8 @@
     <div class="project-container">
       <div class="info">
         <i>Cinema Lettering Archives</i>, Book, 2025<br /><br />
-        210 × 297 mm, 80 pages, comb bound, published by Ningen Paper Press and
-        Korean Film Archive, no ISBN
+        210 × 297 mm, 80 pages, comb bound, published by Ningen Paper Press and Korean Film Archive,
+        no ISBN
       </div>
       <div class="slider">
         <img src="img/cinema/cinema-2.png" class="active" />
@@ -129,6 +129,5 @@
 
     <!-- ✅ JS -->
     <script src="/js/project-img-slider.js"></script>
-    <script src="/js/marquee.js"></script>
   </body>
 </html>
