--- a/blog.html
+++ b/blog.html
@@ -11,83 +11,88 @@
   </head>
   <body id="top">
     <div class="marquee-wrapper">
-      <div id="marquee">
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
-              >Lausanne, Switzerland
-            </a>
+      <div class="marquee">
+        <div class="marquee-content">
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
+                >@Lausanne, Switzerland</a
+              >
+            </div>
+            <div class="date-stamp">— 31.07.2025</div>
           </div>
-          <div class="date-stamp">— 31.07.2025</div>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
+                >@Seoul, South Korea</a
+              >
+            </div>
+            <div class="date-stamp">— 06.12.2024</div>
+          </div>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a>
+            </div>
+            <div class="date-stamp">— 15.11.2024</div>
+          </div>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
+                >@Jakarta, Indonesia</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
+          </div>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
+                >@Bangkok, Thailand</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
+          </div>
         </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
-              >Seoul, South Korea
-            </a>
+
+        <div class="marquee-content" aria-hidden="true">
+          <!-- 복사본 (같은 내용) -->
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
+                >@Lausanne, Switzerland</a
+              >
+            </div>
+            <div class="date-stamp">— 31.07.2025</div>
           </div>
-          <div class="date-stamp">— 06.12.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">Singapore</a>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
+                >@Seoul, South Korea</a
+              >
+            </div>
+            <div class="date-stamp">— 06.12.2024</div>
           </div>
-          <div class="date-stamp">— 15.11.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
-              >Jakarta, Indonesia
-            </a>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">@Singapore</a>
+            </div>
+            <div class="date-stamp">— 15.11.2024</div>
           </div>
-          <div class="date-stamp">— 04.20.2014</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
-              >Bangkok, Thailand
-            </a>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
+                >@Jakarta, Indonesia</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
           </div>
-          <div class="date-stamp">— 04.20.2014</div>
-        </div>
-        <!-- 복사본 -->
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/pWdGfjQ2e274oY7P6" target="_blank"
-              >Lausanne, Switzerland
-            </a>
+          <div class="stamp">
+            <div class="location-stamp">
+              <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
+                >@Bangkok, Thailand</a
+              >
+            </div>
+            <div class="date-stamp">— 04.20.2014</div>
           </div>
-          <div class="date-stamp">— 31.07.2025</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/UiDjZ7pvpDv641SdA" target="_blank"
-              >Seoul, South Korea
-            </a>
-          </div>
-          <div class="date-stamp">— 06.12.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/vC8EabiJ2UyM5A4G9" target="_blank">Singapore</a>
-          </div>
-          <div class="date-stamp">— 15.11.2024</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/iGUFUT7z7JTynkBo8" target="_blank"
-              >Jakarta, Indonesia
-            </a>
-          </div>
-          <div class="date-stamp">— 04.20.2014</div>
-        </div>
-        <div class="stamp">
-          <div class="location-stamp">
-            <a href="https://maps.app.goo.gl/d9YWFp2QuajgbSxm9" target="_blank"
-              >Bangkok, Thailand
-            </a>
-          </div>
-          <div class="date-stamp">— 04.20.2014</div>
         </div>
       </div>
     </div>
@@ -719,7 +724,6 @@
     </div>
 
     <script src="/js/blog-toggle.js"></script>
-    <script src="/js/marquee.js"></script>
     <script src="/js/lang.js"></script>
   </body>
 </html>
